--- a/FunCulture/app/src/main/res/layout/pedometer_view.xml
+++ b/FunCulture/app/src/main/res/layout/pedometer_view.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/step_count"/>
+        android:text="@string/step_count" />
     <TextView
         android:id="@+id/pedometer"
         android:layout_width="wrap_content"
