--- a/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,9 +3,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_accueil"
             android:icon="@drawable/ic_menu_camera"
             android:title="Accueil" />
+        <item
+            android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Appareil Photo" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_slideshow"
