--- a/FunCulture/app/src/main/res/layout/choose_sensor_fragment.xml
+++ b/FunCulture/app/src/main/res/layout/choose_sensor_fragment.xml
@@ -13,7 +13,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sensor_select" />
+        android:text="@string/sensor_select"
+        android:id="@+id/textView2" />
 
     <Spinner
         android:id="@+id/sensorSpinner"
