--- a/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,11 +11,11 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Appareil Photo" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Rejoindre le parcours" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_desc"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Description du parcours" />
         <item
