--- a/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,10 +7,6 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Accueil" />
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Appareil Photo" />
-        <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Rejoindre le parcours" />
@@ -19,9 +15,13 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Description du parcours" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_legende"
             android:icon="@drawable/ic_menu_manage"
             android:title="Légende" />
+        <item
+            android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Appareil Photo" />
     </group>
 
    <item android:title="Communicate"
