--- a/FunCulture/app/src/main/res/layout/fragment_main.xml
+++ b/FunCulture/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.denis.funculture.fragments.AppareilPhoto$PlaceholderFragment" >
+    tools:context="com.example.denis.funculture.activities.AppareilPhoto$PlaceholderFragment" >
 
     <TextView
         android:layout_width="wrap_content"
