--- a/FunCulture/app/src/main/res/layout/maps_fragment.xml
+++ b/FunCulture/app/src/main/res/layout/maps_fragment.xml
@@ -1,6 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+        android:id="@+id/ll_pedometer_view"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="15dp"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/map_fragment_frame"
