--- a/FunCulture/app/src/main/res/layout/maps_fragment.xml
+++ b/FunCulture/app/src/main/res/layout/maps_fragment.xml
@@ -13,6 +13,17 @@
         android:orientation="horizontal">
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/ll_timer_view"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="15dp"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+    </LinearLayout>
+
     <FrameLayout
         android:id="@+id/map_fragment_frame"
         android:orientation="vertical"
