--- a/FunCulture/app/src/main/res/layout/app_bar_main.xml
+++ b/FunCulture/app/src/main/res/layout/app_bar_main.xml
@@ -21,14 +21,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main"
+        android:id="@+id/include2" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="@dimen/fab_margin"
+        android:layout_marginTop="10dp"
+        app:layout_anchor="@+id/include2"
+        app:layout_anchorGravity="right"
         app:srcCompat="@android:drawable/ic_dialog_info" />
 
 </android.support.design.widget.CoordinatorLayout>
