amélioration de l'algo de lancement du son depuis la map : les sons ne peuvent plus se lancer en même temps depuis la map. Bug : si on pause le son puis qu'on lance un autre son depuis la map

--- a/FunCulture/app/src/main/res/layout/maps_fragment.xml
+++ b/FunCulture/app/src/main/res/layout/maps_fragment.xml
@@ -93,28 +93,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
+        android:text=""
         android:id="@+id/textView2"
         android:layout_above="@+id/seekBar"/>
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView3"
         android:layout_above="@+id/seekBar"
+        android:layout_alignEnd="@+id/button4"
         android:layout_alignRight="@+id/button4"
-        android:layout_alignEnd="@+id/button4" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
+        android:text="Aucun son séléctionné"
         android:id="@+id/textView4"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
+        android:layout_above="@+id/seekBar"
         android:layout_centerHorizontal="true" />
 
 
