--- a/FunCulture/app/src/main/res/values/colors.xml
+++ b/FunCulture/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#81be37</color>
+    <color name="colorPrimaryDark">#81be37</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#CCCCCC</color>
     <color name="gray_light">#EEEEEE</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="blue_alpha">#B30066b4</color>
+    <color name="blue">#0066b4</color>
 </resources>
