--- a/FunCulture/app/src/main/res/layout/content_main.xml
+++ b/FunCulture/app/src/main/res/layout/content_main.xml
@@ -110,6 +110,21 @@
             android:textSize="22sp"
             android:padding="5dp"/>
 
+        <EditText
+            android:background="@color/blue_alpha"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:id="@+id/et_pass"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="textPassword"
+            android:hint="Mot de passe"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:textSize="22sp"
+            android:padding="5dp"/>
+
         <Button
             android:background="@color/blue"
             android:textColor="@color/white"
