--- a/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FunCulture/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Accueil" />
         <item
+            android:id="@+id/nav_choose_tag"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Choisir ses types d'intérêt" />
+        <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Rejoindre le parcours" />
