--- a/FunCulture/app/src/main/res/layout/inscription.xml
+++ b/FunCulture/app/src/main/res/layout/inscription.xml
@@ -5,41 +5,20 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Prénom" />
-
-    <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nom" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Date de naissance" />
+        android:text="pseudo" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="date" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:inputType="textPersonName"
+        android:text="âge" />
 
     <EditText
         android:id="@+id/editText5"
