--- a/FunCulture/app/src/main/res/layout/app_bar_main.xml
+++ b/FunCulture/app/src/main/res/layout/app_bar_main.xml
@@ -28,8 +28,9 @@
         android:id="@+id/fab"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginTop="10dp"
+
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginTop="100dp"
         app:layout_anchor="@+id/include2"
         app:layout_anchorGravity="right"
         app:srcCompat="@android:drawable/ic_dialog_info" />
@@ -38,10 +39,10 @@
         android:id="@+id/fab2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginTop="160dp"
         app:layout_anchor="@+id/include2"
-        app:layout_anchorGravity="left"
+        app:layout_anchorGravity="right"
         app:srcCompat="@drawable/check" />
 
 </android.support.design.widget.CoordinatorLayout>
