--- a/FunCulture/app/src/main/res/layout/content_main.xml
+++ b/FunCulture/app/src/main/res/layout/content_main.xml
@@ -26,7 +26,22 @@
             android:background="@color/blue_alpha"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:id="@+id/et_second_name"
+            android:id="@+id/et_pseudo"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:inputType="textPersonName"
+            android:hint="Pseudo"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:textSize="19sp"
+            android:padding="5dp"/>
+
+        <EditText
+            android:background="@color/blue_alpha"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:id="@+id/et_first_name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:inputType="textPersonName"
@@ -41,7 +56,7 @@
             android:background="@color/blue_alpha"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:id="@+id/et_first_name"
+            android:id="@+id/et_second_name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:inputType="textPersonName"
@@ -60,7 +75,7 @@
             android:textColorHint="@color/white"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="Date de naissance(jj.mm.aaaa)"
+            android:hint="Date de naissance (jj.mm.aaaa)"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
