--- a/FunCulture/app/src/main/res/values/dimens.xml
+++ b/FunCulture/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="margin_side_tv_register">5dp</dimen>
+    <dimen name="height_side_tv_register">40dp</dimen>
+    <dimen name="margin_top_tv_register">5dp</dimen>
 </resources>
