Ajout d’une marge pour rendre l’écran propre et de la fermeture du clavier à l’ouverture d’un fragment

--- a/FunCulture/app/src/main/res/layout/edit_profil.xml
+++ b/FunCulture/app/src/main/res/layout/edit_profil.xml
@@ -240,7 +240,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:textSize="19sp"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            android:layout_marginBottom="20dp"/>
 
         <Button
             android:background="@color/blue"
