Ajout des requêtes pour charger un chemin, ses points et points d’intérêts (à terminer)

--- a/FunCulture/app/src/main/res/layout/edit_profil.xml
+++ b/FunCulture/app/src/main/res/layout/edit_profil.xml
@@ -266,6 +266,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
+            android:layout_marginBottom="20dp"
             android:textSize="15sp"
             android:padding="5dp"/>
 
