--- a/FunCulture/app/src/main/res/layout/query_test_view.xml
+++ b/FunCulture/app/src/main/res/layout/query_test_view.xml
@@ -14,7 +14,7 @@
             android:orientation="vertical">
             <Button
                 android:id="@+id/bt_getZones"
-                android:text="Get Zones"
+                android:text="Charger les zones"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"/>
@@ -64,7 +64,30 @@
                 android:padding="5dp"/>
             <Button
                 android:id="@+id/bt_post_point"
-                android:text="Post point"
+                android:text="Poster le point"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
+            <EditText
+                android:id="@+id/et_path_id"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Chemin (id)"
+                android:inputType="number"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"/>
+            <Button
+                android:id="@+id/bt_load_path"
+                android:text="Charger parcours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+            <Button
+                android:id="@+id/bt_show_path"
+                android:text="Infos du parcours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"/>
