--- a/FunCulture/app/src/main/res/layout/content_main.xml
+++ b/FunCulture/app/src/main/res/layout/content_main.xml
@@ -16,9 +16,9 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_register"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
         android:visibility="gone">
 
