--- a/FunCulture/app/src/main/res/layout/epreuve_fragment.xml
+++ b/FunCulture/app/src/main/res/layout/epreuve_fragment.xml
@@ -40,8 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/margin_top_tv_register"
-                android:text="Mot de passe : " />
+                android:gravity="center"
+                android:layout_margin="25dp"
+                android:textSize="20sp"/>
 
             <EditText
                 android:id="@+id/et_result"
